# reaper

./: .gitignore  README  README.txt  a.out  ayush_malloc  ayush_malloc.c  baseline  baseline.c  cache_thrash_malloc_abhinav  cache_thrash_malloc_impl_syscall  cache_thrash_malloc_prod  cache_thrash_malloc_with_free_del  cache_thrash_malloc_with_new_freelist  cache_thrash_malloc_without_freelist_deletion  correctness_malloc_impl_syscall  correctness_malloc_prod  correctness_malloc_with_free_del  correctness_malloc_with_new_freelist  correctness_malloc_without_freelist_deletion  cpu_bound_malloc_abhinav  cpu_bound_malloc_impl_syscall  cpu_bound_malloc_prod  cpu_bound_malloc_with_free_del  cpu_bound_malloc_with_new_freelist  cpu_bound_malloc_without_freelist_deletion  double_malloc.c  makefile  malloc  malloc.c  malloc_malloc_impl_syscall  malloc_malloc_prod  malloc_malloc_with_free_del  malloc_malloc_with_new_freelist  malloc_malloc_without_freelist_deletion  malloc_with_free_del  malloc_with_free_del.c  malloc_with_new_freelist  malloc_with_new_freelist.c  malloc_without_freelist_deletion  malloc_without_freelist_deletion.c  (+2 more)
Code/: CMakeLists.txt  a.out  malloc_with_new_freelist.c  per_thread_heap_malloc.c
benchmarks/: basicTest.c
include/: malloc_common.h
results/: cache_scratch_speedup.py  hoard_cache_scratch.csv  hoard_cache_thrash.csv  hoard_scalability.csv  libc_malloc_cache_scratch.csv  libc_malloc_cache_thrash.csv  libc_malloc_scalability.csv  raw_allocation_time_vs_iteration_count.py  reaper_cache_scratch.csv  reaper_cache_thrash.csv  reaper_scalability.csv  (+2 more)
(+48 files in other folders)
